[gd_scene load_steps=2 format=3 uid="uid://dcxlw2o9k3qwi"]

[ext_resource type="Script" path="res://scripts/screens/TraitScreen.gd" id="1_trait"]

[node name="TraitScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trait")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
custom_minimum_size = Vector2(100, 50)
text = "< Back"

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Trait Equipment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerInfo" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
text = "Lv.1 | Slots: 1/4"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SlotsSection" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 180)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SlotsSection"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/SlotsSection/MarginContainer"]
layout_mode = 2

[node name="SectionTitle" type="Label" parent="VBoxContainer/SlotsSection/MarginContainer/VBox"]
layout_mode = 2
text = "Equipment Slots"
theme_override_font_sizes/font_size = 18

[node name="SlotsGrid" type="HBoxContainer" parent="VBoxContainer/SlotsSection/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 1

[node name="InventorySection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="InventoryHeader" type="HBoxContainer" parent="VBoxContainer/InventorySection"]
layout_mode = 2

[node name="InventoryTitle" type="Label" parent="VBoxContainer/InventorySection/InventoryHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Trait Inventory"
theme_override_font_sizes/font_size = 18

[node name="MergeButton" type="Button" parent="VBoxContainer/InventorySection/InventoryHeader"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Merge"

[node name="CategoryTabs" type="TabContainer" parent="VBoxContainer/InventorySection"]
layout_mode = 2
size_flags_vertical = 3

[node name="MergePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
